[gd_scene load_steps=4 format=3 uid="uid://dx7cokpjvnx47"]

[ext_resource type="Script" path="res://Scripts/singleton.gd" id="1_rfo6o"]

[sub_resource type="Animation" id="Animation_snn8d"]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.0, -50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bultm"]
_data = {
"Fadeout": SubResource("Animation_snn8d")
}

[node name="Singleton" type="Node"]
script = ExtResource("1_rfo6o")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnemySpawner" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
autoplay = true

[node name="MusicPlayer" type="AnimationPlayer" parent="Music"]
libraries = {
"": SubResource("AnimationLibrary_bultm")
}

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
